--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
+Chnages for 0.05        Sun Aug 13 15:28:48 2006
+================================================
+*   small changes to make tests pass without warnings if
+    there are no signature checking modules installed
+*   Up CPANPLUS prerequisite to 0.061
+
 Changes for 0.04        Wed Mar 15 16:09:03 2006
 ================================================
-
 *   use Package::Constants to list constants
 *   documentation improvements
 *   add heuristics what versions of prereqs
@@ -15,5 +20,4 @@ Changes for 0.04        Wed Mar 15 16:09:03 2006
 
 Changes for 0.03_01     Sun Oct 16 13:09:17 2005
 ================================================
-
 *   First public beta  release of CPANPLUS::Dist::Deb
