--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Changes for 0.06        Sun Jun 17 14:21:15 2007
+================================================
+*   Address #27558 - setting deb_version=2 does not promote 
+    a rebuild of a package. --deb_version=X wasn't being
+    passed around properly.
+*   Fix file clean up regex    
+*   Fix uninit variable warning
+*   Package names with a '+' caused errors in deb-genchanges;
+    substituted to '-'
+
 Chnages for 0.05        Sun Aug 13 15:28:48 2006
 ================================================
 *   small changes to make tests pass without warnings if
