--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+Changes for 0.08        Sat Jul  7 11:35:34 2007
+================================================
+*   Address #27562 (A way to specify external dependencies would be
+    grand) by supporting the new metafile munge callback as supported 
+    by CPANPLUS > 0.81.
+*   Constify the DEB spec version
+
 Changes for 0.06        Sun Jun 17 14:21:15 2007
 ================================================
 *   Address #27558 - setting deb_version=2 does not promote 
