--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+Changes for 0.10        Fri Oct 19 15:26:42 2007
+================================================
+*   Promote 0.09_01 to stable.
+
+Changes for 0.09_01     Fri Oct 19 15:09:44 2007
+================================================
+*   Make $dist->create adhere to the 'keep_source' option,
+    if provided, as reminded by Andreas Marienborg. This
+    means that cpan2dist --keepsource will now work as
+    expected.
+
 Changes for 0.08        Sat Jul  7 11:35:34 2007
 ================================================
 *   Address #27562 (A way to specify external dependencies would be
