--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+Changes for 0.12        Fri May  8 12:35:57 2009
+================================================
+*   We were using an internal deprecated module from CPANPLUS 
+    directly, which has been removed in the latest stable release.
+    Since the module provided no needed functionality, the use
+    statement has simple been removed.
+    Users of CPANPLUS 0.85_01 and later should upgrade to this
+    release.
+
 Changes for 0.10        Fri Oct 19 15:26:42 2007
 ================================================
 *   Promote 0.09_01 to stable.
